--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -4,9 +4,10 @@
     margin-right: 10px;
 }
 
-.container {
+.isi {
     width: 100%;
 }
+
 .navbar-expand-lg {
     background-color: #2a356c;
 }
@@ -36,7 +37,8 @@
 }
 
 .jumbotron {
-    padding: 24px 64px;
+    /* margin-top: 75px; */
+    padding: 8px 64px;
     font-family: Poppins;
     font-size: 28px;
     font-style: normal;
@@ -53,6 +55,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    width: 100%;
 }
 
 .jumbotron .lead {
@@ -90,9 +93,90 @@
     margin-left: 12px;
 }
 
+.judulcard {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    color: #2a356c;
+    margin-top: 24px;
+}
+
+.card {
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+}
+
+.footer {
+    background-color: #2a356c;
+    padding: 16px 42px;
+}
+
+.footer .list-unstyled {
+    color: white;
+}
+
+.cpr {
+    color: rgba(255, 255, 255, 0.6);
+    background-color: #17223b;
+    margin-bottom: 0px;
+}
+
+.footer .logo {
+    justify-content: center;
+    align-items: center;
+    justify-content: start;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 36px;
+    height: 100%;
+}
+
+.contact {
+    color: #ffff;
+    font-family: Poppins;
+}
+
+.contact .judul {
+    font-weight: 700;
+    font-size: 24px;
+    font-style: normal;
+}
+
+.icon-contact {
+    font-size: 14px;
+    display: flex;
+    margin-bottom: 12px;
+    align-items: center;
+}
+
+.icon-contact .contact-text {
+    display: flex;
+    margin-left: 12px;
+}
+
+.logo-image-size {
+    max-width: 150px;
+    max-height: 150px;
+}
+
+.maps-image-size {
+    max-width: 250px;
+    max-height: 200px;
+}
+
+.icon-size {
+    max-width: 20px;
+    max-height: 20px;
+}
+
 @media (max-width: 767px) {
     .jumbotron {
-        padding: 0 12px;
+        padding: 40px 24px;
         background-position-x: 60%;
         height: min-content;
     }
@@ -106,12 +190,66 @@
     }
 
     .jumbotron .display-4 {
-        font-size: 36px;
+        font-size: 40px;
         margin-top: 24px;
+    }
+
+    .jumbotron .lead {
+        margin-top: 20px;
+        font-weight: light;
+        font-size: 16px;
     }
 
     .icon-class {
         width: 40px;
         height: 40px;
+    }
+
+    .judulcard {
+        font-size: 24px;
+    }
+
+    .card {
+        justify-content: center;
+        display: flex;
+    }
+
+    .footer .logo {
+        gap: 12px;
+    }
+
+    .logo-image-size {
+        max-width: 50px;
+        max-height: 50px;
+    }
+
+    .maps-image-size {
+        max-width: 100px;
+        max-height: 50px;
+    }
+
+    .contact .judul {
+        font-weight: 700;
+        font-size: 12px;
+        font-style: normal;
+        margin-bottom: 0px;
+    }
+
+    .icon-contact {
+        font-size: 14px;
+        display: flex;
+        margin-bottom: 6px;
+        align-items: center;
+    }
+
+    .icon-contact .contact-text {
+        display: flex;
+        margin-left: 12px;
+        font-size: 8px;
+    }
+
+    .icon-size {
+        max-width: 12px;
+        max-height: 14px;
     }
 }
